--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
+    "react-icons": "^5.0.1",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
+    "daisyui": "^4.10.1",
     "nodemon": "^3.1.0"
   }
 }
